--- a/Practice1/templates/index.html
+++ b/Practice1/templates/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
+    <!-- Почему margin в .about двигает .left-picture ,а наоборот все вообще плохо -->
+
     <img src="../images/logo.png" alt="А у меня на компьютере все работает" class="left-picture">
 
     <div class="about">
