--- a/Workshops/Workshop1/src/templates/index.html
+++ b/Workshops/Workshop1/src/templates/index.html
@@ -36,46 +36,36 @@
     <div class="main__right">
         <div class="personal-info">
             <h3 class="personal-info__title">Experience</h3>
-            <div class="personal-info__content">
-                <div class="personal-info__text">
-                    <div class="personal-info__text_experience">
-                        <p class="personal-info__text_gray">
-                            01.2011 - 08.2017
-                        </p>
-                        <p class="personal-info__text_bold">
-                            Junior Graphic Designer
-                        </p>
-                        <p class="personal-info__text_compony">
-                            Compony | www.company.com
-                        </p>
-                        <div class="personal-info__text_gray">
-                            <p class="personal-info__text_disc">
-                                Discription. If successful in the tests, those who are considered by a hiring service to be suitable to their requirements will be invited.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="personal-info__content">
-                <div class="personal-info__text">
-                    <div class="personal-info__text_experience">
-                        <p class="personal-info__text_gray">
-                            01.2011 - 08.2017
-                        </p>
-                        <p class="personal-info__text_bold">
-                            Junior Graphic Designer
-                        </p>
-                        <p class="personal-info__text_compony">
-                            Compony | www.company.com
-                        </p>
-                        <div class="personal-info__text_gray">
-                            <p class="personal-info__text_disc">
-                                Discription. If successful in the tests, those who are considered by a hiring service to be suitable to their requirements will be invited.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <ul class="personal-info__content personal-info__text personal-info__text_experience">
+                <li>
+                    <p class="personal-info__text_gray">
+                        01.2011 - 08.2017
+                    </p>
+                    <p class="personal-info__text_bold">
+                        Junior Graphic Designer
+                    </p>
+                    <p class="personal-info__text_compony">
+                        Compony | www.company.com
+                    </p>
+                    <p class="personal-info__text_gray personal-info__text_disc">
+                        Discription. If successful in the tests, those who are considered by a hiring service to be suitable to their requirements will be invited.
+                    </p>
+                </li>
+                <li>
+                    <p class="personal-info__text_gray">
+                        01.2011 - 08.2017
+                    </p>
+                    <p class="personal-info__text_bold">
+                        Junior Graphic Designer
+                    </p>
+                    <p class="personal-info__text_compony">
+                        Compony | www.company.com
+                    </p>
+                    <p class="personal-info__text_gray personal-info__text_disc">
+                        Discription. If successful in the tests, those who are considered by a hiring service to be suitable to their requirements will be invited.
+                    </p>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
