--- a/Homeworks/Homework1/src/styles/main.css
+++ b/Homeworks/Homework1/src/styles/main.css
@@ -2,6 +2,10 @@ body {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 .header, .main {
     width: 1062px;
     margin: 0 70px 0 70px;
@@ -10,11 +14,14 @@ body {
 .header__title {
     font-family: Inconsolata;
     font-size: 30px;
+    letter-spacing: 6px;
+    line-height: 24px;
     color: #000000;
-    float: left;
 }
 
 .header__info {
+    margin-top: 68px;
+    margin-bottom: 72px;
     text-transform: uppercase;
 }
 
@@ -25,11 +32,11 @@ body {
     color: #626262;
     float: right;
     padding-left: 100px;
+    margin-top: 6px;
 }
 
 .header__image {
     width: 1062px;
-    background-color: #f1f1f1;
 }
 
 
@@ -40,9 +47,9 @@ body {
     font-family: Arial;
     width: 982px;
     height: auto;
-    margin-top: 99px;
+    margin-top: 90px;
     margin-left: 150px;
-    margin-bottom: 100px;
+    margin-bottom: 225px;
     padding-bottom: 1200px;
 }
 
@@ -61,7 +68,7 @@ body {
 .main__left_image {
     width: 661px;
     height: 496px;
-    background-color: #b4ac9e;
+    margin: 40px 0 40px 0;
 }
 
 .main__left_text {
@@ -71,53 +78,63 @@ body {
 }
 
 .main__left_head {
-     font-size: 30px;
-     color: #626262;
+    margin-top: 20px;
+    font-size: 30px;
+    color: #626262;
  }
 
 
 
 .main__right {
     width: 272px;
-    height: 100%;
     float: right;
 }
 
 
-.main__right_text {
-    font-size: 12px;
-    line-height: 20px;
-    color: #626262;
-}
 
-.main__right_head {
-    font-size: 24px;
-    line-height: 20px;
-    color: #626262;
-}
 
 .main__right_image {
+    margin-top: 2px;
     width: 272px;
     height: 177px;
 }
 
-.main__right_head {
+.main__right_about {
+    margin-top: 23px;
+    margin-left: -5px;
+}
+
+.main__right_about_head {
     font-size: 24px;
+    color: #626262;
+    line-height: 20px;
+    margin-bottom: 0;
+}
+
+.main__right_about_text {
+    font-size: 12px;
     line-height: 20px;
     color: #626262;
+    margin-top: 15px;
 }
+
 .main__right_posts_text {
+    padding-left: 10px;
     font-size: 16px;
     color: #626262;
 }
 
 .main__right_posts_comments {
+    padding-left: 10px;
     font-size: 12px;
     color: #b4ad9e;
     text-transform: uppercase;
 }
 
-
+.main__right_posts_ul {
+    padding-left: 15px;
+    list-style-image: url(../images/ellisse.png);
+}
 
 .footer {
     height: 97px;
