--- a/Homeworks/Homework1/src/templates/index.html
+++ b/Homeworks/Homework1/src/templates/index.html
@@ -8,30 +8,22 @@
 <body>
 <div class="header">
     <div class="header__info">
-        <span>
-            <p class="header__title">
-                minimø
-            </p>
+        <span class="header__title">
+            minimø
         </span>
-        <span>
-            <p class="header__subtitle">
+        <span class=header__subtitle">
+            <a class="header__subtitle" href="www.minimo.com/travel">
                     travel
-            </p>
-        </span>
-        <span>
-            <p class="header__subtitle">
+            </a>
+            <a class="header__subtitle" href="www.minimo.com/music">
                     music
-            </p>
-        </span>
-        <span>
-            <p class="header__subtitle">
+            </a>
+            <a class="header__subtitle" href="www.minimo.com/photodiary">
                     photodiary
-            </p>
-        </span>
-        <span>
-            <p class="header__subtitle">
+            </a>
+            <a class="header__subtitle" href="www.minimo.com/lifestyle">
                     lifestyle
-            </p>
+            </a>
         </span>
     </div>
     <div>
@@ -57,16 +49,18 @@
     </span>
     <span class="main__right">
         <img class="main__right_image" src="../images/right.png">
-        <p class="main__left_head">
-            About me
-        </p>
-        <p class="main__right_text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
+        <div class=main__right_about>
+            <p class="main__right_about_head">
+                About me
+            </p>
+            <p class="main__right_about_text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+        </div>
         <p class="main__subtitle">
             TOP POSTS
         </p>
-        <ul>
+        <ul class="main__right_posts_ul">
             <li>
                 <p class="main__right_posts_text">
                     A day exploring the Alps
@@ -98,10 +92,10 @@
 <div class="footer">
     <div class="footer__info">
         <span>
-            <p class="footer__text">Terms and conditions</p>
+                <a class="footer__text" href="www.minimo.com/tandc">Terms and conditions</a>
         </span>
             <span>
-            <p class="footer__text">Privacy</p>
+                <a class="footer__text" href="www.minimo.com/privacy">Privacy</a>
         </span>
     </div>
 </div>
