reorganization .css files

--- a/Homeworks/Homework1/src/templates/index.html
+++ b/Homeworks/Homework1/src/templates/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>7bits frontend courses homework weeks 2-3</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/main_left.css">
+    <link rel="stylesheet" href="../styles/main_right.css">
 </head>
 <body>
 <div class="header">
@@ -31,7 +35,6 @@
     </div>
 </div>
 <div class="main">
-
     <span class="main__left">
         <p class="main__subtitle">
             PHOTODIARY
