Homework 1 perfect i can

--- a/Homeworks/Homework1/src/templates/index.html
+++ b/Homeworks/Homework1/src/templates/index.html
@@ -52,43 +52,46 @@
     </span>
     <span class="main__right">
         <img class="main__right_image" src="../images/right.png">
-        <div class=main__right_about>
-            <p class="main__right_about_head">
-                About me
+        <div class="main__right_text">
+            <div class=main__right_about>
+                <p class="main__right_about_head">
+                    About me
+                </p>
+                <p class="main__right_about_text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </div>
+            <p class="main__right_subtitle">
+                TOP POSTS
             </p>
-            <p class="main__right_about_text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
+            <ul class="main__right_posts_ul">
+                <li>
+                    <p class="main__right_posts_text">
+                        A day exploring the Alps
+                    </p>
+                    <p class="main__right_posts_comments">
+                        24 comments
+                    </p>
+                </li>
+                <li>
+                    <p class="main__right_posts_text">
+                        American dream
+                    </p>
+                    <p class="main__right_posts_comments">
+                        19 comments
+                    </p>
+                </li>
+                <li>
+                    <p class="main__right_posts_text">
+                        Cold winter days
+                    </p>
+                    <p class="main__right_posts_comments">
+                        15 comments
+                    </p>
+                </li>
+            </ul>
         </div>
-        <p class="main__subtitle">
-            TOP POSTS
-        </p>
-        <ul class="main__right_posts_ul">
-            <li>
-                <p class="main__right_posts_text">
-                    A day exploring the Alps
-                </p>
-                <p class="main__right_posts_comments">
-                    24 comments
-                </p>
-            </li>
-            <li>
-                <p class="main__right_posts_text">
-                    American dream
-                </p>
-                <p class="main__right_posts_comments">
-                    19 comments
-                </p>
-            </li>
-            <li>
-                <p class="main__right_posts_text">
-                    Cold winter days
-                </p>
-                <p class="main__right_posts_comments">
-                    15 comments
-                </p>
-            </li>
-        </ul>
+
     </span>
 
 </div>
