--- a/Homeworks/Homework1/src/styles/main_right.css
+++ b/Homeworks/Homework1/src/styles/main_right.css
@@ -11,6 +11,16 @@
 
 .main__right_about {
     margin-top: 23px;
+}
+
+.main__right_subtitle {
+    margin-top: 27px;
+    margin-bottom: 32px;
+    font-size: 14px;
+    color: #b4ad9e;
+}
+
+.main__right_text {
     margin-left: -5px;
 }
 
@@ -29,13 +39,16 @@
 }
 
 .main__right_posts_text {
-    padding-left: 10px;
+    padding-left: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     font-size: 16px;
     color: #626262;
 }
 
 .main__right_posts_comments {
-    padding-left: 10px;
+    padding-left: 15px;
+    margin-bottom: 25px;
     font-size: 12px;
     color: #b4ad9e;
     text-transform: uppercase;
