add resized images , comments and change TOP POSTS <p> to <a>

--- a/Homeworks/Homework1/src/styles/main_left.css
+++ b/Homeworks/Homework1/src/styles/main_left.css
@@ -3,6 +3,13 @@
     width: 661px;
 }
 
+
+.main__left_subtitle {
+    margin-top: 0;
+    font-size: 14px;
+    color: #b4ad9e;
+}
+
 .main__left_image {
     width: 661px;
     height: 496px;
