--- a/Homeworks/Homework1/src/styles/main_right.css
+++ b/Homeworks/Homework1/src/styles/main_right.css
@@ -5,6 +5,7 @@
 
 .main__right_image {
     margin-top: 2px;
+    margin-left: -2px;
     width: 272px;
     height: 177px;
 }
@@ -55,6 +56,7 @@
 }
 
 .main__right_posts_ul {
+    text-decoration: none;
     padding-left: 15px;
     list-style-image: url(../images/ellisse.png);
 }
