fix icon and footer width in Homework 1

--- a/Homeworks/Homework1/src/styles/main_right.css
+++ b/Homeworks/Homework1/src/styles/main_right.css
@@ -58,5 +58,5 @@
 .main__right_posts_ul {
     text-decoration: none;
     padding-left: 15px;
-    list-style-image: url(../images/ellisse.png);
+    color: #b4ad9e;
 }
