--- a/Homeworks/Homework1/src/templates/index.html
+++ b/Homeworks/Homework1/src/templates/index.html
@@ -12,9 +12,7 @@
 <body>
 <div class="header">
     <div class="header__info">
-        <span class="header__title"> <!-- Шрифты сложна -->
-            minimø
-        </span>
+        <img class="header__title" src="../images/minimø%20.png">
         <span class=header__subtitle">
             <a class="header__subtitle" href="www.minimo.com/travel">
                     travel
@@ -42,7 +40,7 @@
         <p class="main__left_head">
             The perfect weekend getaway
         </p>
-        <p class="main__left_text"> <!-- Тут не получилось как в макет чтобы строки были. Шрифты сложна -->
+        <p class="main__left_text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
         </p>
         <img class="main__left_image" src="../images/main_left_resized.png">
@@ -50,7 +48,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
         </p>
     </span>
-    <span class="main__right"> <!-- Эта часть не очень -->
+    <span class="main__right">
         <img class="main__right_image" src="../images/main_right_resized.png">
         <div class="main__right_text">
             <div class=main__right_about>
@@ -64,9 +62,9 @@
             <p class="main__right_subtitle">
                 TOP POSTS
             </p>
-            <ul class="main__right_posts_ul"> <!-- Как точки правильно подвинуть? -->
+            <ul class="main__right_posts_ul">
                 <li>
-                    <p class="main__right_posts_text"> <!-- Это тоже не нормально? -->
+                    <p class="main__right_posts_text">
                         <a style="color: inherit" href="www.minimo.com/a_day_exploring_the_alps">
                             A day exploring the Alps
                         </a>
@@ -103,8 +101,8 @@
                 </li>
             </ul>
         </div>
-
     </span>
+
 
 </div>
 <div class="footer">
