--- a/Practices/Practice2/src/templates/index.html
+++ b/Practices/Practice2/src/templates/index.html
@@ -4,10 +4,50 @@
     <meta charset="UTF-8">
     <title>7b its frontend courses workshop weeks 2-3</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Hind"
+          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat"
+        rel="stylesheet">
 </head>
 <body>
+
+<div class="header">
+    <img src="../images/image.png" class="main_header_image">
+    <div class="header_icon">
+        <img src="../images/forma.png" class="header_icon_image">\
+    </div>
+</div>
+
 <div class="main">
+    <div class="main_text_title main_text_gray ">
+        ADVENTURES
+    </div>
+    <div class="main_text_black">
+        AWESOME GALLERY POST
+    </div>
+    <div class="main_text_gray main_text_data">
+        JANUARY 19, 2016
+    </div>
+    <div class="main_read main_read_hover">
+        <div class="main_read_block">
+        </div>
+        <div class="main_read_text">
+            READ MORE
+        </div>
+        <div class="main_read_block">
+        </div>
+    </div>
 
 </div>
+
+<div class="footer">
+    <img src="../images/comments_icon.png" class="footer_comments_icon">
+    <div style="display: inline-block">
+        <span class="footer_comments_text">
+            02 COMMENT
+        </span>
+    </div>
+</div>
+
 </body>
 </html>
