Practice 2 reformat *.css

--- a/Practices/Practice2/src/templates/index.html
+++ b/Practices/Practice2/src/templates/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>7b its frontend courses workshop weeks 2-3</title>
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/main_read.css">
     <link href="https://fonts.googleapis.com/css?family=Hind"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat"
