--- a/Homeworks/Homework2/src/styles/header.css
+++ b/Homeworks/Homework2/src/styles/header.css
@@ -13,3 +13,33 @@
 .header_icon_image {
     margin: 7px 0 0 7px;
 }
+
+.header_name {
+    font-size: 42px;
+    line-height: 25px;
+    color: #333333;
+    font-family: Lato, serif;
+    font-weight: bold;
+    font-style: italic;
+    display: inline-block;
+}
+
+.header_button {
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 25px;
+    color: #bdbdbd;
+    font-family: Lato, serif;
+    font-weight: bold;
+    text-align: right;
+    margin-right: 10px;
+}
+
+.header ul{
+    display: inline-block;
+    float: right;
+}
+
+.header li{
+    display: inline-block;
+}
