--- a/Homeworks/Homework2/src/styles/main.css
+++ b/Homeworks/Homework2/src/styles/main.css
@@ -1,8 +1,12 @@
 
 .main {
     margin: 0 0 0 224px;
+    width: 952px;
 }
 
-
+.content {
+    padding: 1px 1px 1px 1px;
+    margin-top: 100px;
+}
 
 
