--- a/Homeworks/Homework2/src/templates/index.html
+++ b/Homeworks/Homework2/src/templates/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Homework 2</title>
-    <link rel="stylesheet" href="../styles/content.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/content/header.css">
+    <link rel="stylesheet" href="../styles/content/content.css">
+    <link rel="stylesheet" href="../styles/content/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Lato"
           rel="stylesheet">
 </head>
@@ -18,15 +20,24 @@
         <div class="header_name">
             Palo Alto
         </div>
+        <ul>
+            <li><a class="header_button" href="zaglushka.html">HOME</a></li>
+            <li><a class="header_button" href="zaglushka.html">ABOUT</a></li>
+            <li><a class="header_button" href="zaglushka.html">ARCHIVE</a></li>
+            <li><a class="header_button" href="zaglushka.html">CONTACT</a></li>
+            <li><a href="zaglushka.html">
+                <img src="../images/header_search.png">
+            </a></li>
+        </ul>
     </div>
     <ul class="content">
         <li>
-            <div class="content__block_category">
-                <div class="content__block_category_text">
+            <div class="content__header">
+                <div class="content__header_text">
                     I Do Travel
                 </div>
             </div>
-            <div class="content__block">
+            <div class="content__block" style="height: 587px">
                 <div class="content__content">
                     <div class="content__block_date">
                         Sep 20
@@ -37,16 +48,18 @@
                     </div>
                     <div class="content__block_line"></div>
                     <div class="content__block_text">
-                        Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna.<br>
-                        Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed<br>
-                        ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas.<br>
-                        Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in<br>
-                        volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum<br>
-                        metus nisi, aliquam sed tincidunt sit amet, pretium et augue.
+                        <div class="content__block_text_black">
+                            Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna.<br>
+                            Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed<br>
+                            ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas.<br>
+                            Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in<br>
+                            volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum<br>
+                            metus nisi, aliquam sed tincidunt sit amet, pretium et augue.
+                        </div>
                     </div>
                     <div class="content__block_footer">
                         <a class="content__block_footer_read" href="read_more.html">READ MORE</a>
-                        <ul >
+                        <ul>
                             <li><a class="content__block_footer_tags" href="zaglushka.html">#Yosemite</a></li>
                             <li><a class="content__block_footer_tags" href="zaglushka.html">#Peak</a></li>
                             <li><a class="content__block_footer_tags" href="zaglushka.html">#Explorer</a></li>
@@ -58,30 +71,43 @@
         <li>
             <div class="content__block_category">
                 <div class="content__block_category_text">
-                    I Do Travel
+                    I Do Observe
                 </div>
             </div>
-            <div class="content__block">
+            <div class="content__block" style="height: 1393px">
                 <div class="content__content">
                     <div class="content__block_date">
-                        Sep 20
+                        Sep 18
                     </div>
                     <div class="content__block_title">
-                        No difference how many peaks you reach<br>
-                        if there was no pleasure in the climb.
+                        You know, I'd rather argue with you, then<br>
+                        laugh with anyone else.
                     </div>
                     <div class="content__block_line"></div>
                     <div class="content__block_text">
-                        Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna.<br>
-                        Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed<br>
-                        ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas.<br>
-                        Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in<br>
-                        volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum<br>
-                        metus nisi, aliquam sed tincidunt sit amet, pretium et augue.
+                        <div class="content__block_text_gray">
+                            Curabitur luctus placerat lorem id eleifend. Nulla ac lacus finibus, tempor<br>
+                            velit hendrerit, vulputate lacus. Nunc fermentum nunc sem, ac eleifend<br>
+                            tellus cursus nec. Donec a euismod est, vitae accumsan purus. Proin ali-<br>
+                            quet ex massa, ac finibus magna commodo vitae.
+                        </div>
+                        <div class="content__block_text_black">
+                            Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna.<br>
+                            Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed<br>
+                            ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas.<br>
+                            Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in<br>
+                            volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum<br>
+                            metus nisi, aliquam sed tincidunt sit amet, pretium et augue.
+                        </div>
+                        <div class="content__block_text_black">
+                            Sed sagittis commodo dolor. Vivamus elementum sem sed sapien bibendum viverra. Curabitur<br>
+                            semper scelerisque turpis eu ullamcorper. Morbi tincidunt auctor orci id consequat. Nulla odio mi,<br>
+                            iaculis id congue quis, euismod id nisi. In varius congue diam, et viverra lorem bibendum ut.
+                        </div>
                     </div>
                     <div class="content__block_footer">
                         <a class="content__block_footer_read" href="read_more.html">READ MORE</a>
-                        <ul >
+                        <ul>
                             <li><a class="content__block_footer_tags" href="zaglushka.html">#Yosemite</a></li>
                             <li><a class="content__block_footer_tags" href="zaglushka.html">#Peak</a></li>
                             <li><a class="content__block_footer_tags" href="zaglushka.html">#Explorer</a></li>
@@ -93,26 +119,51 @@
         <li>
             <div class="content__block_category">
                 <div class="content__block_category_text">
-                    I Do Travel
+                    I Do Reflect
                 </div>
             </div>
-            <div class="content__block">
+            <div class="content__block" style="height: 1129px">
                 <div class="content__content">
                     <div class="content__block_date">
-                        Sep 20
+                        Sep 11
                     </div>
                     <div class="content__block_title">
-                        No difference how many peaks you reach<br>
-                        if there was no pleasure in the climb.
+                        Democracy means simply the bludgeoning<br>
+                        of the people by the people for the<br>
+                        people.
                     </div>
                     <div class="content__block_line"></div>
                     <div class="content__block_text">
-                        Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna.<br>
-                        Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed<br>
-                        ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas.<br>
-                        Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in<br>
-                        volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum<br>
-                        metus nisi, aliquam sed tincidunt sit amet, pretium et augue.
+                        <div class="content__block_text_black">
+                            Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna.<br>
+                            Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed<br>
+                            ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas.<br>
+                            Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in<br>
+                            volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum<br>
+                            metus nisi, aliquam sed tincidunt sit amet, pretium et augue.
+                        </div>
+                        <div class="content__block_text_black">
+                            Mauris sem odio, rhoncus eget euismod sed, pellentesque sit amet felis.<br>
+                            Praesent dictum eleifend dui et efficitur. Nunc non orci in neque sodales semper. Etiam euismod volutpat lorem, vestibulum malesuada justo aliquet eget. Nunc lacus ante, varius a euismod eu, finibus commodo erat. Curabitur tincidunt sit amet nunc id interdum. Aliquam augue nisi, venenatis vitae ex at, lobortis fringilla nibh. Proin placerat enim vitae egestas eleifend. Aliquam
+                        </div>
+                        <div class="content__block_text_black">
+                            quis orci dignissim, posuere nibh a, eleifend augue. Cras quis metus nec tortor aliquet ullamcorper.<br>
+                            Quisque varius porta metus, ut maximus dolor euismod nec. Suspendisse sit amet feugiat turpis.
+                        </div>
+                        <div class="content__block_text_black">
+                            quis orci dignissim, posuere nibh a, eleifend augue. Cras quis metus nec tortor aliquet ullamcorper.<br>
+                            Quisque varius porta metus, ut maximus dolor euismod nec. Suspendisse sit amet feugiat turpis.
+                        </div>
+                        <div class="content__block_text_gray">
+                            Curabitur ut leo pulvinar, consectetur magna eu, feugiat purus. Morbi hendrerit<br>
+                            lectus turpis, a porttitor velit imperdiet id.
+                        </div>
+                        <div class="content__block_text_black">
+                            Nunc placerat dolor at lectus hendrerit dignissim. Ut tortor sem, consectetur nec hendrerit ut,<br>
+                            ullamcorper ac odio. Donec viverra ligula at quam tincidunt imperdiet. Nulla mattis tincidunt auctor.<br>
+                            Nullam scelerisque ante mauris, egestas commodo nisi gravida ultrices. Suspendisse dapibus feugiat<br>
+                            tincidunt. Aliquam gravida quam at ipsum sagittis bibendum.
+                        </div>
                     </div>
                     <div class="content__block_footer">
                         <a class="content__block_footer_read" href="read_more.html">READ MORE</a>
@@ -128,13 +179,8 @@
     </ul>
 </div>
 
-
-
-
 <div class="footer">
 
 </div>
-
-
 </body>
 </html>
