--- a/Homeworks/Homework2/src/templates/index.html
+++ b/Homeworks/Homework2/src/templates/index.html
@@ -26,7 +26,7 @@
             <li><a class="header_button" href="zaglushka.html">ARCHIVE</a></li>
             <li><a class="header_button" href="zaglushka.html">CONTACT</a></li>
             <li><a href="zaglushka.html">
-                <img src="../images/header_search.png">
+                <img style="margin-top: 2px" src="../images/header_search.png">
             </a></li>
         </ul>
     </div>
@@ -180,7 +180,31 @@
 </div>
 
 <div class="footer">
-
+    <div class="footer_name">
+        Palo Alto
+    </div>
+    <ul>
+        <li><a class="footer_button" href="zaglushka.html">HOME</a></li>
+        <li><a class="footer_button" href="zaglushka.html">ABOUT</a></li>
+        <li><a class="footer_button" href="zaglushka.html">ARCHIVE</a></li>
+        <li><a class="footer_button" href="zaglushka.html">CONTACT</a></li>
+        <li class="footer_icon"><img src="../images/footer/search.png"></li>
+    </ul>
+    <div class="footer_line"></div>
+    <div class="footer_text">
+        Nunc placerat dolor at lectus hendrerit dignissim. Ut tortor sem, consectetur nec hendrerit ut, ullamcorper ac odio. Donec viverra<br>
+        ligula at quam tincidunt imperdiet. Nulla mattis tincidunt auctor.
+    </div>
+    <div class="footer_line"></div>
+    <div class="footer_text">
+        © 2015 - Palo Alto. All Rights Reserved. Designed & Developed by<a href="index.html">PixelBuddha Team</a>
+    </div>
+    <ul>
+        <li class="footer_icon"><img src="../images/footer/facebook.png"></li>
+        <li class="footer_icon"><img src="../images/footer/twitter.png"></li>
+        <li class="footer_icon"><img src="../images/footer/instagram.png"></li>
+        <li class="footer_icon"><img src="../images/footer/pinterest.png"></li>
+    </ul>
 </div>
 </body>
 </html>
