--- a/Homeworks/Homework2/src/styles/footer.css
+++ b/Homeworks/Homework2/src/styles/footer.css
@@ -36,7 +36,7 @@
     text-align: center;
     font-size: 14px;
     line-height: 30px;
-    color: #ffffff;
+    color: #9da6d9;
     font-family: Lato, serif;
 }
 
