--- a/Homeworks/Homework2/src/styles/index.css
+++ b/Homeworks/Homework2/src/styles/index.css
@@ -2,8 +2,8 @@ body {
     width: 1400px;
     height: 3518px;
     background-color: #f7f9fc;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    margin: 72px 0 0 0;
+    padding: 1px 0 0 0;
 }
 
 ul {
