--- a/Homeworks/Homework2/src/templates/index.html
+++ b/Homeworks/Homework2/src/templates/index.html
@@ -20,14 +20,12 @@
         <div class="header_name">
             Palo Alto
         </div>
+        <a class="header_search"></a>
         <ul>
-            <li><a class="header_button" href="zaglushka.html">HOME</a></li>
-            <li><a class="header_button" href="zaglushka.html">ABOUT</a></li>
-            <li><a class="header_button" href="zaglushka.html">ARCHIVE</a></li>
-            <li><a class="header_button" href="zaglushka.html">CONTACT</a></li>
-            <li><a href="zaglushka.html">
-                <img style="margin-top: 2px" src="../images/header_search.png">
-            </a></li>
+            <li><a style="color: #bdbdbd" href="foadfgdal">HOME</a></li>
+            <li><a href="adsfgadfted.html">ABOUT</a></li>
+            <li><a href="asdfgsaf.html">ARCHIVE</a></li>
+            <li><a href="fdas.html">CONTACT</a></li>
         </ul>
     </div>
     <ul class="content">
@@ -38,7 +36,7 @@
                 </div>
             </div>
             <div class="content__block" style="height: 587px">
-                <div class="content__content">
+                <div style="margin-left: 102px; width: 756px;">
                     <div class="content__block_date">
                         Sep 20
                     </div>
@@ -57,14 +55,14 @@
                             metus nisi, aliquam sed tincidunt sit amet, pretium et augue.
                         </div>
                     </div>
-                    <div class="content__block_footer">
-                        <a class="content__block_footer_read" href="read_more.html">READ MORE</a>
-                        <ul>
-                            <li><a class="content__block_footer_tags" href="zaglushka.html">#Yosemite</a></li>
-                            <li><a class="content__block_footer_tags" href="zaglushka.html">#Peak</a></li>
-                            <li><a class="content__block_footer_tags" href="zaglushka.html">#Explorer</a></li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="content__block_footer">
+                    <a class="content__block_footer_read" href="read_more.html">READ MORE</a>
+                    <ul>
+                        <li><a class="content__block_footer_tags" href="zaglushka.html">#Yosemite</a></li>
+                        <li><a class="content__block_footer_tags" href="zaglushka.html">#Peak</a></li>
+                        <li><a class="content__block_footer_tags" href="zaglushka.html">#Explorer</a></li>
+                    </ul>
                 </div>
             </div>
         </li>
@@ -75,6 +73,7 @@
                 </div>
             </div>
             <div class="content__block" style="height: 1393px">
+                <img src="../images/content_img_1.png">
                 <div class="content__content">
                     <div class="content__block_date">
                         Sep 18
@@ -187,14 +186,14 @@
         <li><a class="footer_button" href="zaglushka.html">HOME</a></li>
         <li><a class="footer_button" href="zaglushka.html">ABOUT</a></li>
         <li><a class="footer_button" href="zaglushka.html">ARCHIVE</a></li>
-        <li><a class="footer_button" href="zaglushka.html">CONTACT</a></li>
+        <li><a class="footer_button" href="index.html">CONTACT</a></li>
         <li class="footer_icon"><img src="../images/footer/search.png"></li>
     </ul>
     <div class="footer_line"></div>
-    <div class="footer_text">
-        Nunc placerat dolor at lectus hendrerit dignissim. Ut tortor sem, consectetur nec hendrerit ut, ullamcorper ac odio. Donec viverra<br>
-        ligula at quam tincidunt imperdiet. Nulla mattis tincidunt auctor.
-    </div>
+        <div class="footer_text">
+            Nunc placerat dolor at lectus hendrerit dignissim. Ut tortor sem, consectetur nec hendrerit ut, ullamcorper ac odio. Donec viverra<br>
+            ligula at quam tincidunt imperdiet. Nulla mattis tincidunt auctor.
+        </div>
     <div class="footer_line"></div>
     <div class="footer_text">
         © 2015 - Palo Alto. All Rights Reserved. Designed & Developed by<a href="index.html">PixelBuddha Team</a>
