--- a/Homeworks/Homework2/src/styles/content/content.css
+++ b/Homeworks/Homework2/src/styles/content/content.css
@@ -4,12 +4,10 @@
     box-shadow: 0 0 25px rgba(0,0,0,0.1);
     background-color: #ffffff;
     margin-bottom: 50px;
+    position:relative;
 }
 
-.content__content {
-    margin-left: 102px;
-    width: 756px;
-}
+
 
 .content__block_date {
     font-size: 14px;
