--- a/Homeworks/Homework2/src/styles/content/footer.css
+++ b/Homeworks/Homework2/src/styles/content/footer.css
@@ -1,4 +1,9 @@
 .content__block_footer {
+    position: absolute;
+    bottom: 0;
+    margin-left: 76px;
+    width: 756px;
+    margin-bottom: 10px;
 }
 
 .content__block_footer li{
@@ -6,6 +11,7 @@
 }
 
 .content__block_footer ul{
+    position: relative;
     display: inline-block;
     float: right;
 }
@@ -17,6 +23,16 @@
     font-family: Lato, serif;
     font-weight: bold;
     display: inline-block;
+    border: 1px solid #ffffff;
+    padding: 0 24px 0 24px;
+}
+
+.content__block_footer_read:hover {
+    border: 1px solid #f1f1f1;
+}
+
+.content__block_footer_read:focus {
+    border: 1px solid #7c89cc;
 }
 
 .content__block_footer_tags {
@@ -25,6 +41,7 @@
     color: #b2b2b2;
     font-family: Lato, serif;
     text-align: right;
+    margin-left: 10px;
 }
 
 .content__block_footer_tags:hover{
@@ -32,7 +49,7 @@
     text-decoration: underline;
 }
 
-.content__block_footer_tags:visited{
+.content__block_footer_tags:focus{
     color: #5c6bc0;
     text-decoration: none;
 }
