--- a/Homeworks/Homework2/src/styles/header.css
+++ b/Homeworks/Homework2/src/styles/header.css
@@ -1,3 +1,7 @@
+.header {
+    margin-top: 11px;
+}
+
 .header_icon {
     width: 40px;
     height: 35px;
@@ -24,20 +28,44 @@
     display: inline-block;
 }
 
-.header_button {
+.header_search{
+    width: 16px;
+    height: 17px;
+    display: inline-block;
+    float: right;
+    margin-top: 2px;
+    background: url("../images/header/search_normal.png");
+}
+
+.header_search:hover{
+    background: url("../images/header/search_hover.png");
+}
+
+
+.header ul li a{
     text-transform: uppercase;
     font-size: 16px;
     line-height: 25px;
-    color: #bdbdbd;
+    color: #333333;
     font-family: Lato, serif;
     font-weight: bold;
     text-align: right;
-    margin-right: 10px;
+    margin-right: 35px;
+}
+
+.header ul li a:hover{
+    border-bottom: 2px solid #5c6bc0;
+}
+
+.header ul li a:focus{
+    color: #5c6bc0;
+    border-bottom: 0;
 }
 
 .header ul{
     display: inline-block;
     float: right;
+    margin: 0 0 0 0;
 }
 
 .header li{
