--- a/Homeworks/Homework2/src/templates/index.html
+++ b/Homeworks/Homework2/src/templates/index.html
@@ -17,9 +17,7 @@
 
 <div class="main">
     <div class="header">
-        <div class="header_name">
-            Palo Alto
-        </div>
+        <img src="../images/PaloAlto.png">
         <a class="header_search"></a>
         <ul>
             <li><a style="color: #bdbdbd" href="foadfgdal">HOME</a></li>
@@ -30,12 +28,12 @@
     </div>
     <ul class="content">
         <li>
-            <div class="content__header">
-                <div class="content__header_text">
-                    I Do Travel
-                </div>
-            </div>
             <div class="content__block" style="height: 587px">
+                <a class="content__header" href="adsad">
+                    <div>
+                        I Do Travel
+                    </div>
+                </a>
                 <div style="margin-left: 102px; width: 756px;">
                     <div class="content__block_date">
                         Sep 20
@@ -67,14 +65,14 @@
             </div>
         </li>
         <li>
-            <div class="content__block_category">
-                <div class="content__block_category_text">
-                    I Do Observe
-                </div>
-            </div>
-            <div class="content__block" style="height: 1393px">
-                <img src="../images/content_img_1.png">
-                <div class="content__content">
+            <div class="content__block" style="height: 1393px; padding: 0 0 0 0">
+                <img style="width: 952px" src="../images/content_img_1.png">
+                <a class="content__header" href="adsad">
+                    <div>
+                        I Do Observe
+                    </div>
+                </a>
+                <div style="margin-left: 102px; width: 756px;">
                     <div class="content__block_date">
                         Sep 18
                     </div>
@@ -116,13 +114,13 @@
             </div>
         </li>
         <li>
-            <div class="content__block_category">
-                <div class="content__block_category_text">
-                    I Do Reflect
-                </div>
-            </div>
             <div class="content__block" style="height: 1129px">
-                <div class="content__content">
+                <a class="content__header" href="adsad">
+                    <div>
+                        I Do Reflect
+                    </div>
+                </a>
+                <div style="margin-left: 102px; width: 756px;">
                     <div class="content__block_date">
                         Sep 11
                     </div>
@@ -179,16 +177,16 @@
 </div>
 
 <div class="footer">
-    <div class="footer_name">
-        Palo Alto
-    </div>
+    <img style="margin-left: auto; margin-right: auto; display: block;" src="../images/footer/PaloAlto.png">
     <ul>
-        <li><a class="footer_button" href="zaglushka.html">HOME</a></li>
+        <li><a class="footer_button" style="color: #9da6d9" href="zaglushka.html">HOME</a></li>
         <li><a class="footer_button" href="zaglushka.html">ABOUT</a></li>
         <li><a class="footer_button" href="zaglushka.html">ARCHIVE</a></li>
         <li><a class="footer_button" href="index.html">CONTACT</a></li>
-        <li class="footer_icon"><img src="../images/footer/search.png"></li>
+        <li class="footer_icon" style="display: inline-block"><a href="allala">
+            <img class="footer_search" src="../images/footer/search.png"></a></li>
     </ul>
+
     <div class="footer_line"></div>
         <div class="footer_text">
             Nunc placerat dolor at lectus hendrerit dignissim. Ut tortor sem, consectetur nec hendrerit ut, ullamcorper ac odio. Donec viverra<br>
@@ -199,10 +197,10 @@
         © 2015 - Palo Alto. All Rights Reserved. Designed & Developed by<a href="index.html">PixelBuddha Team</a>
     </div>
     <ul>
-        <li class="footer_icon"><img src="../images/footer/facebook.png"></li>
-        <li class="footer_icon"><img src="../images/footer/twitter.png"></li>
-        <li class="footer_icon"><img src="../images/footer/instagram.png"></li>
-        <li class="footer_icon"><img src="../images/footer/pinterest.png"></li>
+        <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/facebook.png"></li>
+        <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/twitter.png"></li>
+        <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/instagram.png"></li>
+        <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/pinterest.png"></li>
     </ul>
 </div>
 </body>
