--- a/Homeworks/Homework2/src/styles/content/content.css
+++ b/Homeworks/Homework2/src/styles/content/content.css
@@ -5,11 +5,13 @@
     background-color: #ffffff;
     margin-bottom: 50px;
     position:relative;
+    padding: 1px 0 0 0;
 }
 
 
 
 .content__block_date {
+    margin-top: 20px;
     font-size: 14px;
     line-height: 50px;
     color: #bdbdbd;
