--- a/Homeworks/Homework2/src/styles/content/header.css
+++ b/Homeworks/Homework2/src/styles/content/header.css
@@ -2,17 +2,26 @@
     width: 88px;
     height: 32px;
     background-color: #5c6bc0;
-    margin-left: 874px;
-    margin-bottom: -50px;
-    z-index: 1;
-    position: relative;
-}
-
-.content__header_text {
+    margin-top: 20px;
+    margin-right: -12px;
+    float: right;
     font-size: 14px;
     line-height: 32px;
     color: #ffffff;
     font-family: Lato, serif;
     font-weight: bold;
     text-align: center;
+}
+
+.content__header:hover {
+    width: 98px;
+    height: 36px;
+    margin-right: -15px;
+    margin-top: 17px;
+    background-color: #6b79c6;
+}
+
+
+.content__header:focus {
+    background-color: #5c6bc0;
 }
