--- a/Homeworks/Homework2/src/styles/content/header.css
+++ b/Homeworks/Homework2/src/styles/content/header.css
@@ -16,10 +16,40 @@
 .content__header:hover {
     width: 98px;
     height: 36px;
-    margin-right: -15px;
-    margin-top: 17px;
+    margin-right: -17px;
+    margin-top: 18px;
     background-color: #6b79c6;
 }
+
+.content__header_reflect {
+    width: 92px;
+    margin-top: 18px;
+}
+
+.content__header_reflect:hover {
+    width: 102px;
+    margin-top: 16px;
+    margin-right: -17px;
+}
+
+.content__header_observe {
+    width: 103px;
+    margin-top: 17px;
+}
+
+.content__header_observe:hover {
+    width: 113px;
+    margin-top: 15px;
+    margin-right: -17px;
+}
+
+.content__header_text {
+    display: inline-block;
+    text-align: center;
+    margin: auto;
+    vertical-align: middle;
+}
+
 
 
 .content__header:focus {
