--- a/Homeworks/Homework2/src/templates/index.html
+++ b/Homeworks/Homework2/src/templates/index.html
@@ -30,7 +30,7 @@
         <li>
             <div class="content__block" style="height: 587px">
                 <a class="content__header" href="adsad">
-                    <div>
+                    <div class="content__header_text">
                         I Do Travel
                     </div>
                 </a>
@@ -67,8 +67,8 @@
         <li>
             <div class="content__block" style="height: 1393px; padding: 0 0 0 0">
                 <img style="width: 952px; height: 533px" src="../images/content_img_1.png">
-                <a class="content__header" href="adsad" style="width: 103px; margin-top: 17px">
-                    <div>
+                <a class="content__header content__header_observe" href="adsad">
+                    <div class="content__header_text">
                         I Do Observe
                     </div>
                 </a>
@@ -115,8 +115,8 @@
         </li>
         <li>
             <div class="content__block" style="height: 1129px; margin-bottom: 100px">
-                <a class="content__header" href="adsad" style="width: 92px; margin-top: 18px">
-                    <div>
+                <a class="content__header content__header_reflect" href="adsad">
+                    <div class="content__header_text">
                         I Do Reflect
                     </div>
                 </a>
@@ -143,7 +143,9 @@
                         </div>
                         <div class="content__block_text_black" style="margin-top: 12px">
                             Mauris sem odio, rhoncus eget euismod sed, pellentesque sit amet felis.<br>
-                            Praesent dictum eleifend dui et efficitur. Nunc non orci in neque sodales semper. Etiam euismod volutpat lorem, <a href="adada">vestibulum malesuada</a> justo aliquet eget. Nunc lacus ante, varius a euismod eu, finibus commodo erat. Curabitur tincidunt sit amet nunc id interdum. Aliquam augue nisi, venenatis vitae ex at,<br>
+                            Praesent dictum eleifend dui et efficitur. Nunc non orci in neque sodales semper. Etiam euismod volutpat lorem,
+                            <a href="adada" style="color: #5c6bc0; border-bottom: 1px solid #5c6bc0; text-underline: none">vestibulum malesuada</a>
+                            justo aliquet eget. Nunc lacus ante, varius a euismod eu, finibus commodo erat. Curabitur tincidunt sit amet nunc id interdum. Aliquam augue nisi, venenatis vitae ex at,<br>
                             lobortis fringilla nibh. Proin placerat enim vitae egestas eleifend. Aliquam
                         </div>
                         <div class="content__block_text_black">
@@ -184,8 +186,11 @@
         <li><a class="footer_button" href="zaglushka.html">ABOUT</a></li>
         <li><a class="footer_button" href="zaglushka.html">ARCHIVE</a></li>
         <li><a class="footer_button" href="index.html">CONTACT</a></li>
-        <li class="footer_icon" style="display: inline-block"><a href="allala">
-            <img class="footer_search" src="../images/footer/search.png"></a></li>
+        <li class="footer_icon" style="display: inline-block; position: relative; top: 10px;">
+            <a href="allala">
+                <img class="footer_search" src="../images/footer/search.png">
+            </a>
+        </li>
     </ul>
 
     <div class="footer_line" style="margin-top: 33px"></div>
